Resolved spacing bug on mobile display

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -98,7 +98,7 @@ header {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-        padding: 0.5rem 0 1.5rem 0;
+        padding: 1rem 0 1rem 0;
         list-style-type: none;
         width: 85%;
         margin: 0 auto;
